--- a/style.css
+++ b/style.css
@@ -15,9 +15,10 @@ body{
 .container{
     display: grid;
     grid-template-columns: 1fr 1fr;
-    width: 650px;
+    max-width: 650px;
     border-radius:15px;
     background-color: white;
+    margin:20px;
     
 }
 
@@ -86,6 +87,7 @@ body{
     font-weight:500;
     opacity:0.6;
     text-decoration:line-through;
+    
 }
 
 .btn button{
@@ -108,11 +110,11 @@ button:hover{
     background-color:hsl(157, 47%, 19%);   
 }
 
-@media (max-width: 600px){
+@media (max-width:600px){
 
     body{
-        max-height: 100vh;
-        max-width:100vw;
+        min-height: 100vh;
+        min-width:100vw;
     }
 
     .container{
@@ -120,6 +122,7 @@ button:hover{
         height:90%;
         display:flex;
         flex-direction: column;
+        margin: 20px;
     }
 
     .image{
@@ -130,8 +133,19 @@ button:hover{
         display: flex;
         flex-direction: column;
         width:100%;
-        height:300px;
+        height:100%;
         border-radius:10px 10px 0 0;
+        
+    }
+
+    .price-info{
+        display: flex;
+        justify-content: flex-start;
+        gap:20px;
+    }
+
+    br{
+        display:none;
     }
 
 }
